tests/ui/issues/issue-12187-1.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-12187-1.rs:6:14
   |
LL |     let &v = new();
   |              ^^^ cannot infer type of the type parameter `T` declared on the function `new`
   |
help: consider specifying the generic argument
   |
LL |     let &v = new::<T>();
   |                 +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
